Add missing slash /

--- a/backupConfig.yml
+++ b/backupConfig.yml
@@ -9,4 +9,4 @@
       ios_config:
         backup: yes
         backup_options:
-          dir_path: "./backup/{{ inventory_hostname }}"
+          dir_path: "./backup/{{ inventory_hostname }}/"
