--- a/resolvCONF.yml
+++ b/resolvCONF.yml
@@ -1,7 +1,10 @@
+#Credit to @cdschr1 for the play and Tower support!
+
 ---
 - name: Configure /etc/resolv.conf
   hosts: all
   become: true
+  gather_facts: true
 
   tasks:
     - name: Remove immutable attibute from resolv.conf
